Fix icon alignment on Homepage card icons

--- a/styles/home.css
+++ b/styles/home.css
@@ -129,7 +129,7 @@ a.button.cta:active {
 
 .card-icon {
   font-size: 72px;
-  flex: 1 1 auto;
+  height: 120px;
   display: flex;
   align-items: flex-end;
 }
@@ -144,7 +144,7 @@ a.button.cta:active {
   width: 72px;
   height: 72px;
   background-position: center;
-  background-size: contain;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
 }
 
